--- a/src/app.css
+++ b/src/app.css
@@ -37,17 +37,16 @@ h1 {
 }
 
 .card {
-  padding: 2em;
+  margin: 1.5em;
 }
 
 #app {
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
 button {
-  border-radius: 8px;
+  border-radius: 4px;
   border: 1px solid lightgray;
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -58,7 +57,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: rgba(193, 57, 57, 0.8);
 }
 button:focus,
 button:focus-visible {
